--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to Lin's Blog!</h1>
-        <small>本站记录生物信息笔记</small>
+        <hr>
+        <small>用来记录和分享自己的学习编程的经验和感悟。</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
